--- a/css/box_chart.css
+++ b/css/box_chart.css
@@ -32,7 +32,6 @@
   }
 }
 .box_wrap {
-  border: 1px dashed #ddd;
   width: 450px;
   height: 600px;
   display: flex;
@@ -74,7 +73,7 @@
 }
 .box_r .box_back {
   position: absolute;
-  background: #8ac007;
+  background: #6dba00;
   width: 90px;
   height: 0;
   bottom: 42px;
@@ -88,7 +87,7 @@
   position: absolute;
   top: -55px;
   font-size: 34px;
-  color: #8ac007;
+  color: #6dba00;
   font-weight: 600;
   left: 14px;
   letter-spacing: -2px;
@@ -140,7 +139,7 @@
 }
 .box_l .box_back {
   position: absolute;
-  background: #8ac007;
+  background: #6dba00;
   width: 90px;
   height: 0;
   bottom: 42px;
@@ -154,7 +153,7 @@
   position: absolute;
   top: -55px;
   font-size: 34px;
-  color: #8ac007;
+  color: #6dba00;
   font-weight: 600;
   left: 14px;
   letter-spacing: -2px;
@@ -216,7 +215,7 @@
 }
 .chart_desc_wrap ul li:nth-child(1):before {
   content: "∎";
-  color: #8ac007;
+  color: #6dba00;
   position: absolute;
   left: 0;
   top: -5px;
@@ -250,7 +249,7 @@
     width: 0;
   }
   to {
-    width: 35%;
+    width: 65%;
   }
 }
 @keyframes gauge16 {
@@ -258,7 +257,7 @@
     width: 0;
   }
   to {
-    width: 16%;
+    width: 36%;
   }
 }
 @keyframes gauge46 {
@@ -266,22 +265,23 @@
     width: 0;
   }
   to {
-    width: 46%;
+    width: 86%;
   }
 }
 .chart_gauge_wrap {
   max-width: 420px;
   margin: 0 auto;
-  margin-top: 70px;
+  margin-top: 50px;
 }
 .chart_gauge_wrap .gauge_wrap:nth-child(1) .gauge {
   width: 0;
   height: 8px;
-  background: #000;
+  background: rgb(30, 148, 255);
+  background: linear-gradient(90deg, rgb(30, 148, 255) 0%, rgb(30, 144, 255) 25%, rgb(109, 186, 0) 100%);
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
   position: relative;
-  margin-top: 40px;
+  margin-top: 45px;
 }
 .chart_gauge_wrap .gauge_wrap:nth-child(1) .gauge::before {
   content: attr(data-label);
@@ -302,7 +302,7 @@
   vertical-align: text-bottom;
   letter-spacing: -2px;
   opacity: 0;
-  animation: opacityNum 1s linear 3s alternate forwards;
+  animation: opacityNum 1s linear 5s alternate forwards;
 }
 .chart_gauge_wrap .gauge_wrap:nth-child(1) .gauge.active {
   animation: gauge35 2s linear 1s 1 alternate forwards;
@@ -310,11 +310,12 @@
 .chart_gauge_wrap .gauge_wrap:nth-child(2) .gauge {
   width: 0;
   height: 8px;
-  background: #000;
+  background: rgb(30, 148, 255);
+  background: linear-gradient(90deg, rgb(30, 148, 255) 0%, rgb(30, 144, 255) 25%, rgb(109, 186, 0) 100%);
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
   position: relative;
-  margin-top: 40px;
+  margin-top: 45px;
 }
 .chart_gauge_wrap .gauge_wrap:nth-child(2) .gauge::before {
   content: attr(data-label);
@@ -335,7 +336,7 @@
   vertical-align: text-bottom;
   letter-spacing: -2px;
   opacity: 0;
-  animation: opacityNum 1s linear 3s alternate forwards;
+  animation: opacityNum 1s linear 5s alternate forwards;
 }
 .chart_gauge_wrap .gauge_wrap:nth-child(2) .gauge.active {
   animation: gauge16 2s linear 1s 1 alternate forwards;
@@ -343,11 +344,12 @@
 .chart_gauge_wrap .gauge_wrap:nth-child(3) .gauge {
   width: 0;
   height: 8px;
-  background: #000;
+  background: rgb(30, 148, 255);
+  background: linear-gradient(90deg, rgb(30, 148, 255) 0%, rgb(30, 144, 255) 25%, rgb(109, 186, 0) 100%);
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
   position: relative;
-  margin-top: 40px;
+  margin-top: 45px;
 }
 .chart_gauge_wrap .gauge_wrap:nth-child(3) .gauge::before {
   content: attr(data-label);
@@ -368,7 +370,7 @@
   vertical-align: text-bottom;
   letter-spacing: -2px;
   opacity: 0;
-  animation: opacityNum 1s linear 3s alternate forwards;
+  animation: opacityNum 1s linear 5s alternate forwards;
 }
 .chart_gauge_wrap .gauge_wrap:nth-child(3) .gauge.active {
   animation: gauge46 2s linear 1s 1 alternate forwards;
